-
Bug
-
Resolution: Done
-
P1: Critical
-
5.8.0
-
None
-
Android build, Qt Quick Controls Material 2
-
e91c9feab8a0cf4cff71cc68ab0f001b1531504f
When using a RadioButton with the Material style, deploying on Android, I get the following runtime error:
W libtestRadio.so: (null):0 ((null)): QQmlApplicationEngine failed to load component
W libtestRadio.so: (null):0 ((null)): qrc:/main.qml:24 Type RadioButton unavailable
W libtestRadio.so: file:///data/user/0/org.qtproject.example.testRadio/qt-reserved-files/qml/QtQuick/Controls.2/Material/qmldir:-1 plugin cannot be loaded for module ".data.user.0.org.qtproject.example.testRadio.qt-reserved-files.qml.QtQuick.Controls.2.Material": Module namespace 'QtQuick.Controls.Material' does not match import URI '.data.user.0.org.qtproject.example.testRadio.qt-reserved-files.qml.QtQuick.Controls.2.Material'
I think this is related to ticket QTBUG-57618, where it is fixed, as some imports were missing.
Don't know whether it can be checked that this is also valid for some other controls, not mentioned here or in the related ticked?
- relates to
-
QTBUG-64868 QQC2 apps do not run on Android
-
- Closed
-
- resulted from
-
QTBUG-57618 Qt Quick Controls crash on Android 6 and 7
-
- Closed
-
For Gerrit Dashboard: QTBUG-59026 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
186116,2 | Add missing QML type registrations | 5.8 | qt/qtquickcontrols2 | Status: MERGED | +2 | 0 |
187045,4 | Make QQuickStyleSelector::select() more robust | 5.9 | qt/qtquickcontrols2 | Status: MERGED | +2 | 0 |