Add missing QML type registrations

For the internal Radio and CheckIndicator types.

Task-number: QTBUG-59026
Change-Id: I7e34f29e33ebd3d748892df0ba1592fe8ae5ed44
Reviewed-by: Mitch Curtis <mitch.curtis@qt.io>